# llm-rpg

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  run.py
src/llm_rpg/: __init__.py  __main__.py  cli.py  cli_menus.py  config.py  main.py  rng.py
src/llm_rpg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_rpg/engine/: __init__.py  actions.py  catalog.py  combat.py  consistency.py  consumables.py  dialogue.py  engine.py  equipment.py  items.py  matching.py  memory.py  narration.py  rewards.py  world_gen.py
src/llm_rpg/game/: __init__.py  new_game.py  session.py
src/llm_rpg/llm/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py  prompts.py
src/llm_rpg/state/: __init__.py  db.py  models.py  repository.py  schema.sql
tests/: conftest.py  test_catalog_and_consumables.py  test_cli_menus.py  test_consistency.py  test_dialogue.py  test_engine_flow.py  test_equipment.py  test_initial_map.py  test_items_and_grants.py  test_llm_json.py  test_narration.py  test_repository.py  test_rewards_and_intent.py  test_rng.py  test_starting_inventory.py  test_worldgen_map.py
