[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rpg"
version = "0.1.0"
description = "An LLM-narrated text RPG with a deterministic, hallucination-resistant world-state engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.25"]
ollama = ["httpx>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
llm-rpg = "llm_rpg.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_rpg = ["state/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
